--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Proyecto Final CV" />
     <meta property="og:description" content="Curso front end, Argentina Programa, enero 2023 - Proyecto final" />
-    <meta property="og:image" content="imagenes/cv.jpg" />
+    <meta property="og:image" content="https://angeless399.github.io/ProyectoFinalCV/imagenes/cv.jpg" />
     <meta property="og:image:width" content="1256" />
     <meta property="og:image:height" content="620" />
-    <meta property="og:url" content="https://escuela.it/cursos/curso-avanzado-python" />
+    <meta property="og:url" content="https://angeless399.github.io/ProyectoFinalCV/" />
     <meta property="og:site_name" content="Proyecto Final CV" />
 </head>
 <body>
